--- a/style-sobre.css
+++ b/style-sobre.css
@@ -42,14 +42,14 @@ header {
    
 }
 
-.Estudante-ber{
+.Estudante-mah{
     width: 70px;
 }
 
 .Estudante-Sa{
     width: 55px;
 }
-.Estudante-Gu{
+.Estudante-yas{
     width: 52px;
 }
 
