--- a/style.css
+++ b/style.css
@@ -46,13 +46,13 @@ header {
     width: 85px;;
 }
 
-.Estudante-ber{
+.Estudante-mah{
     width: 110px;
 }
 .Estudante-Sa{
     width: 64px;
 }
-.Estudante-Gu{
+.Estudante-yas{
     width: 60px;
 }
 
