--- a/style-sobre.css
+++ b/style-sobre.css
@@ -73,7 +73,7 @@ nav a {
     text-decoration: none;
     font-weight: bold;
     font-size: 22px;
-    color: #000000;
+    color: #ffffff;
   
 
 }
