--- a/banner.css
+++ b/banner.css
@@ -19,5 +19,8 @@
     background-color: tranparnte;
     border: 1px solid var(--branco);
     color: var(--branco);
+    border-radius: 24 px;
+    padding: 1em;
+    width: 100%;
     border-radius: 24px;
 }
