--- a/banner.css
+++ b/banner.css
@@ -15,7 +15,7 @@
     margin: 1em 0;
 }
 
-.banner_pequisa{
+.banner__pequisa{
     background-color: tranparnte;
     border: 1px solid var(--branco);
     color: var(--branco);
@@ -23,4 +23,12 @@
     padding: 1em;
     width: 100%;
     border-radius: 24px;
+}
+
+.banner__pequisa::placeholder{
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    color: var(--branco);
 }
